# Compilers-Project

./: .gitignore  CMakeLists.txt  Makefile  ParseTable.csv  README.md  SimulationParsing.csv  SimulationParsing.xlsx  TransitionTable.txt  globals.h  input.txt  main.cpp  parse_table.csv  parser.h.gch  syntax_rules.txt  syntax_rules_collection.txt  test.txt
DFA/: SubsetConstruction.cpp  dfa.h  subset_construction.h
NFA/: nfa.cpp  nfa.h  nfa_generator.cpp  nfa_generator.h  operations_handler.cpp  operations_handler.h  state.cpp  state.h
Parser/: infix_to_postfix.cpp  infix_to_postfix.h  input_parser.cpp  input_parser.h  parser.cpp  parser.h  token.h
src/: LL1Parser.cpp  LL1Parser.h  SubsetConstruction.cpp  dfa.h  first_follow_builder.cpp  first_follow_builder.h  globals.cpp  globals.h  infix_to_postfix.cpp  infix_to_postfix.h  input_parser.cpp  input_parser.h  lexical_analyzer.cpp  lexical_analyzer.h  ll1_processor.cpp  ll1_processor.h  nfa.cpp  nfa.h  nfa_generator.cpp  nfa_generator.h  operations_handler.cpp  operations_handler.h  parse_tree_builder.cpp  parse_tree_builder.h  regular_expression.h  state.cpp  state.h  subset_construction.h  syntax_parser.cpp  syntax_parser.h  token.cpp  token.h  utils.cpp  utils.h
